# NeuroGame

./: .gitignore  AGENTS.md  README.md  demo.py  pyproject.toml
assets/sprites/placeholders/: README.md  placeholders.json
src/neurogame/: __init__.py  engine.py  iso.py  pathfinding.py  spirits.py  sprites.py  tk_renderer.py
tests/: test_iso.py  test_pathfinding.py  test_projectiles.py  test_scene.py  test_spirits.py
